--- a/src/App.scss
+++ b/src/App.scss
@@ -1,133 +1,242 @@
-.grommet img {
-  border: 1px solid #e6e6e6;
-  background-color: white;
-  padding: 10px;
-  // margin: 25px;
-  // max-width: 80%;
+body {
+  margin-top: -25px;
+}
+
+#root {
+  position: relative;
+}
+
+* {
+  outline: none !important;
+}
+
+header {
+  max-height: 120px;
+}
+
+.grommet.grommetux-app--hidden {
+  position: static;
+  overflow: hidden;
 }
 
 .grommetux-tiles--fill.grommetux-box--wrap>.grommetux-tile {
   justify-content: center;
 }
 
-// .images {
-//   max-width: 1280px;
-//   margin: 0 auto;
-// }
-
-// @media screen and (min-width: 1280px) {
-//   .images {
-//     padding-left: 140px;
-//   }
-// }
-
-@media screen and (max-width: 890px) {
-  .img {
-    // position: initial !important;
-    // width: fit-content;
-    // margin: 15px auto !important;
+#google-maps-layer {
+  // &:not(.visible) {
+  //   opacity: 0;
+  // }
+  &.grommetux-layer--closeable:not(.grommetux-layer--hidden)~.grommet.grommetux-app--hidden {
+    position: static;
   }
-}
-
-
-.fixed {
-  position: fixed;
-  top: 0;
-  background: white;
-}
-
-haeder {
-  background: white;
-}
-
-
-.grommetux-layer--closeable:not(.grommetux-layer--hidden) ~ .grommet.grommetux-app--hidden {
-  position: static;
-}
-
-#skip-link-layer.grommetux-layer--hidden, .grommetux-layer {
+} // #skip-link-layer.grommetux-layer--hidden, #google-maps-layer.grommetux-layer {
+//   background: transparent;
+//   bottom: initial;
+//   left: calc(100vw - 388px);
+//   box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.28);
+//   max-width: 388px;
+//   max-height: 255px;
+//   padding: 2px;
+// }
+#google-maps-layer.grommetux-layer {
   background: transparent;
   bottom: initial;
   left: calc(100vw - 388px);
-  box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.28);
+  box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.28);
   max-width: 388px;
   max-height: 255px;
   padding: 2px;
 }
 
 @media screen and (min-width: 45em) {
-  // .grommetux-layer--align-center.grommetux-layer--closeable:not(.grommetux-layer--hidden) {
-  //   width: 288px;
-  //   height: 255px;
-  //   left: calc(100vw - 388px);
-  //   top: 0;
+  #google-maps-layer {
+    .grommetux-layer--align-center.grommetux-layer--closeable:not(.grommetux-layer--hidden) .grommetux-layer__container {
+      background: transparent; // width: 100%;
+      // height: 100%;
+      padding: 2px;
+      top: 0;
+      bottom: initial;
+      right: 0;
+      transform: none;
+      -webkit-transform: none;
+      padding: 0;
+    }
 
-  // }
-  .grommetux-layer--align-center.grommetux-layer--closeable:not(.grommetux-layer--hidden) .grommetux-layer__container {
-    // bottom: initial;
-    // left: calc(100vw - 388px);
-    // box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.28);
-    // max-width: 388px;
-    // max-height: 255px;
-    width: 100%;
-    height: 100%;
-    padding: 2px;
-    top: 0;
-    right: 0;
-    transform: none;
-    -webkit-transform: none;
+    > div {
+      padding: 0;
+    }
+
+    .grommetux-layer .grommetux-layer__container {
+      padding: 0;
+    }
+    .grommetux-button {
+      border: none;
+      margin: 0;
+      padding: 0;
+      &:hover {
+        border: none;
+        padding: 0;
+        margin: 0
+      }
+    }
+    .grommetux-control-icon {
+      fill: white;
+      stroke: white;
+      &:hover {
+        fill: darken(white, 10%);
+        stroke: darken(white, 10%);
+        margin: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  .image-expand-layer {
+    .grommetux-layer__container {
+      padding: 0;
+      padding-right: 50px;
+      background: transparent;
+      box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.28);
+    }
+
+    button {
+      .grommetux-control-icon {
+        fill: #bcbecb;
+        stroke: #bcbecb;
+      }
+      &:hover {
+        .grommetux-control-icon {
+          fill: darken(#bcbecb, 10%);
+          stroke: darken(#bcbecb, 10%);
+          margin: 0;
+          padding: 0;
+        }
+      }
+    }
   }
 }
 
-#logo {
+.round-info-box-wrapper {
   position: absolute;
-  top: 260px;
-  left: 50px;
-  width: 200px;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  z-index: 1;
 }
 
-
-.grommetux-button:not(.grommetux-button--box):hover {
-  border-width: 4px;
-  margin: -2px;
+.round-info-box {
+  height: 120px;
 }
 
-
-@mixin keyframes($name) {
-  @keyframes #{$name} {
-    @content;
+.round-location {
+  .grommetux-value__label {
+    max-width: 200px;
+    font-size: .95rem;
   }
 }
 
-@mixin shadow($b, $s, $sm, $c) {
-  box-shadow: 0 0 8px 6px $c,
-  0 0 $b $s rgba(#fff, 0.4),
-  0 0 $b ($s + $sm) $c;
+.round-score {
+  svg {
+    margin-right: 0 !important;
+  }
 }
 
-$continent-map: (
-  africa: #4c54a3,
-  asia: #fd5832,
-  austrailia: #23b9d1,
-  europe: #9fd4c8,
-  northAmerica: #ff8729,
-  southAmerica: #23b9d1
-) !default;
+// .logo-main-container {
+//   position: absolute;
+//   top: 260px;
+//   left: 50px;
+//   width: 200px;
+//   height: 200px;
+// }
+
+// .grommetux-button:not(.grommetux-button--box):not(.disabled):hover {
+//   border-width: 4px;
+//   margin: -2px;
+// }
+
+.grommetux-button.disabled:not(.grommetux-button--box) {
+  cursor: default !important;
+}
 
 circle {
   transition: all 0.2s;
 }
 
-@each $continent, $color in $continent-map {
-  $i: index($continent-map, ($continent $color));
-  .#{$continent}.ripple {
-    background-color: lighten($color, 5%);
-    animation: $continent (2 + $i/10)+s ($i)+s ease-out infinite;
-  }
+.delay-1 {
+  animation-delay: 2s !important;
+}
 
-  @include keyframes($continent) {
-    0% { @include shadow(0px, 0px, 0px, rgba($color, 0)); }
-    10% { @include shadow(12px, 10px, 4px, $color); }
-    100% { @include shadow(0px, 40px, 0px, rgba($color, 0)); }
+.delay-2 {
+  animation-delay: 4s !important;
+}
+
+.delay-3 {
+  animation-delay: 6s !important;
+}
+
+// #skip-link-layer.grommetux-layer--hidden {
+//   display: none;
+// }
+
+#mode-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  box-shadow: none;
+  &:hover,
+  &:active {
+    border: none;
+    box-shadow: none;
+    margin: 0;
   }
 }
+
+#hero {
+  height: calc(100vh - 120px);
+  margin-bottom: 0;
+  #dot-map {
+    height: 100%;
+    width: 100%;
+  }
+  #logo {
+    height: 100%;
+    width: 100%;
+    max-height: 200px;
+    max-width: 200px;
+  }
+}
+
+@keyframes bounceIn {
+  from, 20%, 40%, 60%, 80%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% { opacity: 0; transform: scale3d(.3, .3, .3); }
+  20% { transform: scale3d(1.1, 1.1, 1.1); }
+  40% { transform: scale3d(.9, .9, .9); }
+  60% { opacity: 1; transform: scale3d(1.03, 1.03, 1.03); }
+  80% { transform: scale3d(.97, .97, .97); }
+
+  to {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.bounceIn {
+  animation-name: bounceIn;
+}
+
+.round-score {
+  animation: 1s 2s linear bounceIn;
+}
+
+// .gm-style div {
+//   height: 200px;
+//   width: 200px;
+// }
+@import 'styles/App-dark-mode.scss';
+@import 'styles/App-light-mode.scss';
