--- a/src/styles/App-dark-mode.css
+++ b/src/styles/App-dark-mode.css
@@ -206,8 +206,15 @@
       fill: #505164;
       stroke: #505164; }
 
-.round-info-box {
+.round-info-box .round-score {
   background: #6afff3;
   color: #05060A; }
-  .round-info-box svg path {
+  .round-info-box .round-score svg path {
     stroke: #05060A !important; }
+
+.round-info-box .round-location {
+  background: #141526;
+  border: 3px solid #6afff3;
+  color: #6afff3; }
+  .round-info-box .round-location svg path {
+    stroke: #6afff3 !important; }
