--- a/src/styles/notifcation.scss
+++ b/src/styles/notifcation.scss
@@ -1,241 +1,93 @@
-@import 'styles/mask-transitions.scss';
+/* round info slider */
 
-body {
-  margin-top: -25px;
-}
-
-// .grommet, .brand-font {
-//   font-family: 'MetricH';
-// }
-
-#root {
-  position: relative;
-}
-
-* {
-  outline: none !important;
-}
-
-header {
-  max-height: 120px;
-}
-
-.grommet.grommetux-app--hidden {
-  position: static;
-  overflow: hidden;
-}
-
-.grommetux-tiles--fill.grommetux-box--wrap>.grommetux-tile {
-  justify-content: center;
-}
-
-#google-maps-layer {
-  // &:not(.visible) {
-  //   opacity: 0;
-  // }
-  &.grommetux-layer--closeable:not(.grommetux-layer--hidden)~.grommet.grommetux-app--hidden {
-    position: static;
-  }
-} // #skip-link-layer.grommetux-layer--hidden, #google-maps-layer.grommetux-layer {
-//   background: transparent;
-//   bottom: initial;
-//   left: calc(100vw - 388px);
-//   box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.28);
-//   max-width: 388px;
-//   max-height: 255px;
-//   padding: 2px;
-// }
-#google-maps-layer.grommetux-layer {
+.round-info-slider {
   background: transparent;
-  bottom: initial;
-  left: calc(100vw - 388px);
-  box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.28);
-  max-width: 388px;
-  max-height: 255px;
-  padding: 2px;
-}
 
-@media screen and (min-width: 45em) {
-  #google-maps-layer {
-    .grommetux-layer--align-center.grommetux-layer--closeable:not(.grommetux-layer--hidden) .grommetux-layer__container {
-      background: transparent; // width: 100%;
-      // height: 100%;
-      padding: 2px;
-      top: 0;
-      bottom: initial;
-      right: 0;
-      transform: none;
-      -webkit-transform: none;
-      padding: 0;
-    }
-
-    > div {
-      padding: 0;
-    }
-
-    .grommetux-layer .grommetux-layer__container {
-      padding: 0;
-    }
-    .grommetux-button {
-      border: none;
-      margin: 0;
-      padding: 0;
-      &:hover {
-        border: none;
-        padding: 0;
-        margin: 0
-      }
-    }
-    .grommetux-control-icon {
-      fill: white;
-      stroke: white;
-      &:hover {
-        fill: darken(white, 10%);
-        stroke: darken(white, 10%);
-        margin: 0;
-        padding: 0;
-      }
-    }
+  .close {
+    top: 1.8em;
+    right: 1.8em;
   }
 
-  .image-expand-layer {
-    .grommetux-layer__container {
-      padding: 0;
-      padding-right: 50px;
-      background: transparent;
-      box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.28);
-    }
-
-    button {
-      .grommetux-control-icon {
-        fill: #bcbecb;
-        stroke: #bcbecb;
-      }
-      &:hover {
-        .grommetux-control-icon {
-          fill: darken(#bcbecb, 10%);
-          stroke: darken(#bcbecb, 10%);
-          margin: 0;
-          padding: 0;
-        }
-      }
-    }
-  }
-}
-
-.round-info-box-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translate(0, -50%);
-  z-index: 1;
-}
-
-.round-info-box {
-  height: 100px;
-}
-
-.round-location {
-  max-height:100px;
-  z-index: 2;
-  .grommetux-value__label {
-    max-width: 200px;
-    font-size: .95rem;
-  }
-}
-
-.round-score {
-  max-height:100px;
-  z-index: 1;
-  svg {
-    margin-right: 0 !important;
-  }
-}
-
-// .logo-main-container {
-//   position: absolute;
-//   top: 260px;
-//   left: 50px;
-//   width: 200px;
-//   height: 200px;
-// }
-
-// .grommetux-button:not(.grommetux-button--box):not(.disabled):hover {
-//   border-width: 4px;
-//   margin: -2px;
-// }
-
-.grommetux-button.disabled:not(.grommetux-button--box) {
-  cursor: default !important;
-}
-
-circle {
-  transition: all 0.2s;
-}
-
-.delay-1 {
-  animation-delay: 2s !important;
-}
-
-.delay-2 {
-  animation-delay: 4s !important;
-}
-
-.delay-3 {
-  animation-delay: 6s !important;
-}
-
-// #skip-link-layer.grommetux-layer--hidden {
-//   display: none;
-// }
-
-#mode-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: none;
-  box-shadow: none;
-  &:hover,
-  &:active {
-    border: none;
-    box-shadow: none;
-    margin: 0;
-  }
-}
-
-#hero {
-  height: calc(100vh - 120px);
-  margin-bottom: 0;
-  #dot-map {
-    height: 100%;
-    width: 100%;
-  }
-  #logo {
-    height: 100%;
-    width: 100%;
-    max-height: 200px;
-    max-width: 200px;
-  }
-}
-
-@keyframes bounceIn {
-  from, 20%, 40%, 60%, 80%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  .show .close,
+  .hide .close,
+  .show .content div,
+  .hide .content div {
+    animation-name: animFade;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
   }
 
-  0% { opacity: 0; transform: scale3d(.3, .3, .3); }
-  20% { transform: scale3d(1.1, 1.1, 1.1); }
-  40% { transform: scale3d(.9, .9, .9); }
-  60% { opacity: 1; transform: scale3d(1.03, 1.03, 1.03); }
-  80% { transform: scale3d(.97, .97, .97); }
+  .show .close,
+  .show .content div {
+    animation-delay: 0.8s;
+  }
 
-  to {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
+  .hide .close,
+  .hide .content div {
+    animation-direction: reverse;
+  }
+
+  .close::before,
+  .close::after {
+    background: #ddd;
+    width: 2px;
+  }
+
+  .close:hover::before,
+  .close:hover::after {
+    background: #aaa;
+  }
+
+  .box-inner {
+    overflow: hidden;
+  }
+
+  .thumb {
+    position: absolute;
+    z-index: 100;
+    overflow: hidden;
+  }
+
+  .content {
+    background: #fff;
+    color: #727275;
+    font-weight: bold;
+    padding: 0 40px 0 80px;
+    height: 64px;
+    line-height: 60px;
+  }
+
+  .show .content,
+  .hide .content {
+    animation-name: animSlide;
+    animation-duration: 0.4s;
+    animation-fill-mode: both;
+    animation-timing-function: cubic-bezier(0.7,0,0.3,1);
+  }
+
+  .show .content {
+    animation-delay: 0.5s;
+  }
+
+  .hide .content {
+    animation-direction: reverse;
+    animation-delay: 0.3s;
+  }
+
+  .show .thumb,
+  .hide .thumb {
+    animation-name: animJelly;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+  }
+
+  .hide .thumb {
+    animation-direction: reverse;
+    animation-delay: 0.3s;
   }
 }
-
 
 @keyframes animSlide {
   0% { transform: translate3d(-100%,0,0); }
@@ -294,17 +146,4 @@ circle {
   100% {transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
 
-.bounceIn {
-  animation-name: bounceIn;
-}
 
-.round-location {
-  animation: 1s linear animJelly;
-}
-
-// .gm-style div {
-//   height: 200px;
-//   width: 200px;
-// }
-@import 'styles/App-dark-mode.scss';
-@import 'styles/App-light-mode.scss';
