--- a/src/styles/App-dark-mode.scss
+++ b/src/styles/App-dark-mode.scss
@@ -193,7 +193,7 @@ $continent-map: (
   }
 }
 
-#game-overview-layer > div {
+#game-summary-layer > div {
   background: $dark-blue;
   color:  $neutral-2 !important;
 }
