--- a/src/styles/App-dark-mode.css
+++ b/src/styles/App-dark-mode.css
@@ -219,6 +219,6 @@
   .round-info-box .round-location svg path {
     stroke: #6afff3 !important; }
 
-#game-overview-layer > div {
+#game-summary-layer > div {
   background: #141526;
   color: #686a83 !important; }
